REGISTRATION SERVICE WIP
Registration Service WIP